rome2_results/results/softmax/hip.log
hipcc --rocm-path=/opt/rocm -I/home/ga27mex2/rocm/hipCUB/build/_CPack_Packages/Linux/RPM/hipcub-3.3.0-Linux/devel/opt/rocm/include -std=c++14 -O3 -O3 -c main.cu -o main.o
/opt/rocm/bin/rocm_agent_enumerator:95: SyntaxWarning: invalid escape sequence '\w'
  @staticVars(search_name=re.compile("gfx[0-9a-fA-F]+:[-+:\w]+"))
/opt/rocm/bin/rocm_agent_enumerator:152: SyntaxWarning: invalid escape sequence '\A'
  line_search_term = re.compile("\A\s+Name:\s+(amdgcn-amd-amdhsa--gfx\d+)")
/opt/rocm/bin/rocm_agent_enumerator:154: SyntaxWarning: invalid escape sequence '\A'
  line_search_term = re.compile("\A\s+Name:\s+(gfx\d+)")
/opt/rocm/bin/rocm_agent_enumerator:175: SyntaxWarning: invalid escape sequence '\w'
  target_search_term = re.compile("1002:\w+")
main.cu:68:29: error: no member named 'meta_group_size' in 'cooperative_groups::thread_block_tile<32, void>'
  int i = blockIdx.x * warp.meta_group_size() + warp.meta_group_rank();
                       ~~~~ ^
main.cu:68:54: error: no member named 'meta_group_rank' in 'cooperative_groups::thread_block_tile<32, void>'
  int i = blockIdx.x * warp.meta_group_size() + warp.meta_group_rank();
                                                ~~~~ ^
2 errors generated when compiling for gfx908.
make: *** [Makefile:50: main.o] Error 1
